Fixing alignment

--- a/Style.css
+++ b/Style.css
@@ -15,10 +15,15 @@
 	position: fixed;
 	top: 0;
 	left: 0;
-	width: 100%;
+	display: flex;
+	flex-basis: 100px;
+	text-align: center;
 	background-color: #1a1a1a; 
 	color: lightgray; 
 	padding: 10px;
+	width: 100%;
+	
+	;
 }
 
 .navbar a:hover {
@@ -43,6 +48,7 @@
 	font-size: large;
 	padding: 100;
 	list-style-position: inside;
+	display: flex;
 
 }
 
@@ -64,7 +70,8 @@ input[type="submit"], input[type="reset"], button {
 
 .sectionRow input{
 	display:inline-block;
-	margin: 5px;
+	margin-left: 5px;
+	margin-top: 0px;
 }
 
 .sectionRow label{
@@ -92,12 +99,17 @@ input[type="submit"], input[type="reset"], button {
 }
 
 .sectionColumn{
-	display:inline-block;
+	display:flex;
+	gap: 2px;
+	flex-direction: column;
+	justify-content: center;
+	flex-wrap: wrap;
+	width: 100%;
 
 }
 
 .sectionColumn p {
-	width: 100px;
+	width: 100%;
 }
 
 .hideP{
